# ys-requirements-list

./: .gitignore  .gitmodules  Dockerfile  INSTALL.md  Makefile  README.md  SETUP_GUIDE.md  SETUP_MCP.md  guides_mcp.py  guides_mcp_api.py  pyproject.toml  requirements.txt  setup_mcp.py  sync_notion.py  test_guides_mcp.py  test_notion_connection.py  test_semantic_search.py
.github/: copilot-instructions.md
.github/prompts/: audit.prompt.md  clarify.prompt.md  constitution.prompt.md  plan.prompt.md  specify.prompt.md  tasks.prompt.md  waive.prompt.md  waivers.prompt.md
.github/workflows/: content_pipeline.yml  deploy  deploy.yml  main.yml  notionsync.yml
.specify/: project.json
.specify/memory/: constitution.md
.specify/scripts/: install-python-cli.js  savedeploy.sh  setup-oauth.sh  sync_version.py
.specify/templates/: agent-file-template.md  guide-template-with-rules.md  plan-template.md  spec-template.md  (+1 more)
docs/: COPILOT_SETUP.md  DEPLOYMENT.md  MCP_SETUP.md  README_MCP.md  REPOSITORY_STRUCTURE.md  SETUP_GUIDE.md  api-reference.md  configuration.md  local-development.md  scripts.md  testing.md  troubleshooting.md
guides/: README.md
mcp/: guides_mcp.py  guides_mcp_api.py  guides_mcp_http_server.py  guides_mcp_server.py  guides_mcp_stdio_proxy.py  start.sh  test_minimal.py
scripts/: generate_embeddings.py  onboard_guide.py  sync_notion.py  upload_foundational_to_notion.py  vector_search.py
tests/: test_guides_api.py  test_mcp_server.py  test_semantic_search.py  test_simple_server.py
ys-guides/: .mcp.json  README.md  mcp-proxy.py  requirements.txt
(+226 files in other folders)
